# reool

./: CHANGELOG.md  CI.yml  Cargo.toml  LICENSE-APACHE  README.md  metrics_example.json  run_integration_test.sh
.github/workflows/: CI.yml
examples/: connect.rs  many_pings_unbounded.rs  metrix_multi_node.rs  metrix_replica_set.rs  metrix_single_node.rs  ping.rs  pool_stress.rs  runtime.rs  stats.rs  too_many_pings.rs  write_read.rs
integration/: Cargo.toml  test.sh
integration/src/: main.rs
integration/src/runner/: connections.rs  data_ops.rs  mod.rs
src/: activation_order.rs  backoff_strategy.rs  commands.rs  config.rs  connection_factory.rs  error.rs  executor_flavour.rs  helpers.rs  instrumentation.rs  lib.rs  pool_connection.rs  pooled_connection.rs  redis_ops.rs  redis_rs.rs
src/config/: builder.rs  config_types.rs  mod.rs
src/instrumentation/: metrix.rs  mod.rs  state_counters.rs
src/multi_node_pool/: inner.rs  mod.rs
src/node_pool/: mod.rs
src/pool/: inner_pool.rs  mod.rs  test.rs
src/pool_internal/: inner_pool.rs  mod.rs  test.rs
src/pools/: checkout_constraint.rs  mod.rs
src/pools/pool_internal/: checkout_constraint.rs  extended_connection_factory.rs  inner_pool.rs  managed.rs  mod.rs  test.rs
src/pools/pool_internal/inner_pool/: core.rs  mod.rs
src/pools/pool_internal/instrumentation/: mod.rs
src/pools/pool_per_node/: inner.rs  instrumentation.rs  mod.rs
src/pools/pool_per_node/inner/: mod.rs
src/pools/pool_per_node/inner/checkout_strategies/: mod.rs  one_attempt.rs  one_cycle.rs  one_immediately.rs  two_attempts.rs  two_cycles.rs
src/pools/shared_pool/: mod.rs
src/pools/single_pool/: mod.rs
src/redis_rs/: mod.rs
src/replica_set_pool/: mod.rs
src/single_node_pool/: mod.rs
