[package]
name = "reool"
version = "0.23.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "An asynchrounous connection pool for Redis based on tokio and redis-rs"
documentation = "https://docs.rs/reool"
homepage = "https://github.com/chridou/reool"
repository = "https://github.com/chridou/reool"
keywords = ["redis", "connection", "connection-pool", "tokio", "async"]
edition = "2018"

[dependencies]
log = "0.4"
futures = "0.3"
trust-dns-resolver = "0.19"
tokio = { version = "0.2", features = ["rt-core", "time", "sync"] }
redis = "0.15"
rand = "0.7"
metrix = { version = "0.13", optional = true, features = ["log"] }

[features]
default = []

[dev-dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }

[[example]]
name = "metrix_single_node"
required-features = ["metrix"]

[[example]]
name = "metrix_multi_node"
required-features = ["metrix"]

[[example]]
name = "pool_stress"
required-features = ["metrix"]
