[package]
name = "reool"
version = "0.29.0"
authors = ["Christian Douven <chridou@users.noreply.github.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "An asynchrounous connection pool for Redis based on tokio and redis-rs"
documentation = "https://docs.rs/reool"
homepage = "https://github.com/chridou/reool"
repository = "https://github.com/chridou/reool"
keywords = ["redis", "connection", "connection-pool", "tokio", "async"]
edition = "2018"

[dependencies]
log = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
trust-dns-resolver = "0.20"
redis = {version = "0.20", features= ["geospatial", "tokio-comp", "script"] }
rand = "0.8"
metrix = { version = "0.13", optional = true, features = ["log"] }

[features]
default = []

[dev-dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "metrix_single_node"
required-features = ["metrix"]

[[example]]
name = "metrix_multi_node"
required-features = ["metrix"]

[[example]]
name = "pool_stress"
required-features = ["metrix"]
